tests/functional/lang/eval-fail-symmetric-bitAnd-abort-throw.err.exp
error:
       … while calling the 'bitAnd' builtin
         at /pwd/lang/eval-fail-symmetric-bitAnd-abort-throw.nix:1:1:
            1| builtins.bitAnd (abort "x") (throw "y")
             | ^
            2|

       … while calling the 'abort' builtin
         at /pwd/lang/eval-fail-symmetric-bitAnd-abort-throw.nix:1:18:
            1| builtins.bitAnd (abort "x") (throw "y")
             |                  ^
            2|

       error: evaluation aborted with the following error message: 'x'
